src/objects/FieloCMS__ComponentLibrary__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMS__AdditionalFields__c</fullName>
        <description>You can choose a list of custom fields that will be added at the bottom of the New and Edit Form when the component library record is selected</description>
        <label>Additional Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ControlClass__c</fullName>
        <label>Control Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__CssClasses__c</fullName>
        <description>Nombres de clases CSS que van en la vista del componente</description>
        <label>Css Classes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DataClass__c</fullName>
        <label>Data Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DefaultFields__c</fullName>
        <label>Default Fields</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloCMS__ExcludeFields__c</fullName>
        <description>Set of fields that will be avoid in the Component Field set</description>
        <label>Exclude Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Icon__c</fullName>
        <defaultValue>&apos;fielosf-icon-grid&apos;</defaultValue>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Layouts__c</fullName>
        <description>A subset of the layouts that are available, if the field is empty will show all</description>
        <label>Layouts</label>
        <picklist>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Plugin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plugin</label>
        <referenceTo>FieloCMS__Plugin__c</referenceTo>
        <relationshipLabel>Components Library</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__RecordType__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__RelatedListName__c</fullName>
        <description>List[Menu]</description>
        <label>Related List Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Subcomponents__c</fullName>
        <label>Subcomponents</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ViewClass__c</fullName>
        <label>View Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__sObject__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Component Library</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components Library</pluralLabel>
    <recordTypes>
        <fullName>FieloCMS__List</fullName>
        <active>true</active>
        <label>List</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Record</fullName>
        <active>true</active>
        <label>Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Widget</fullName>
        <active>true</active>
        <label>Widget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>